Tooltips on Statistics screen are now consistent.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -585,18 +585,31 @@
   "evolution.tooltip.containerCapacity": "Capacity: %1$s",
   "evolution.tooltip.containerEmpty": "Empty",
   "evolution.tooltip.damage.crushing": "%1$s Crushing Damage",
+  "evolution.tooltip.damage.crushing.name": "Crushing Damage",
   "evolution.tooltip.damage.drowning": "%1$s Drowning Damage",
+  "evolution.tooltip.damage.drowning.name": "Drowning Damage",
   "evolution.tooltip.damage.fire": "%1$s Fire Damage",
+  "evolution.tooltip.damage.fire.name": "Fire Damage",
   "evolution.tooltip.damage.generic": "%1$s Attack Damage",
+  "evolution.tooltip.damage.generic.name": "Damage",
   "evolution.tooltip.damage.impact": "%1$s Impact Damage",
+  "evolution.tooltip.damage.impact.name": "Impact Damage",
   "evolution.tooltip.damage.melee": "%1$s Melee Damage",
+  "evolution.tooltip.damage.melee.name": "Melee Damage",
   "evolution.tooltip.damage.piercing": "%1$s Piercing Damage",
+  "evolution.tooltip.damage.piercing.name": "Piercing Damage",
   "evolution.tooltip.damage.ranged": "%1$s Ranged Damage",
+  "evolution.tooltip.damage.ranged.name": "Ranged Damage",
   "evolution.tooltip.damage.sickness": "%1$s Sickness Damage",
+  "evolution.tooltip.damage.sickness.name": "Sickness Damage",
   "evolution.tooltip.damage.slashing": "%1$s Slashing Damage",
+  "evolution.tooltip.damage.slashing.name": "Slashing Damage",
   "evolution.tooltip.damage.suffocation": "%1$s Suffocation Damage",
+  "evolution.tooltip.damage.suffocation.name": "Suffocation Damage",
   "evolution.tooltip.damage.total": "%1$s Total Damage",
+  "evolution.tooltip.damage.total.name": "Total Damage",
   "evolution.tooltip.damage.void": "%1$s Void Damage",
+  "evolution.tooltip.damage.void.name": "Void Damage",
   "evolution.tooltip.damageMultiplier": "x%1$s Damage Multiplier",
   "evolution.tooltip.damageProportional": "Damage Proportional to Momentum",
   "evolution.tooltip.durability": "%1$s Durability",
