--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -585,18 +585,31 @@
   "evolution.tooltip.containerCapacity": "Capacidade: %1$s",
   "evolution.tooltip.containerEmpty": "Vazio",
   "evolution.tooltip.damage.crushing": "%1$s Dano Esmagante",
+  "evolution.tooltip.damage.crushing.name": "Dano Esmagante",
   "evolution.tooltip.damage.drowning": "%1$s Dano de Afogamento",
+  "evolution.tooltip.damage.drowning.name": "Dano de Afogamento",
   "evolution.tooltip.damage.fire": "%1$s Dano de Fogo",
+  "evolution.tooltip.damage.fire.name": "Dano de Fogo",
   "evolution.tooltip.damage.generic": "%1$s Dano de Ataque",
+  "evolution.tooltip.damage.generic.name": "Dano",
   "evolution.tooltip.damage.impact": "%1$s Dano de Impacto",
+  "evolution.tooltip.damage.impact.name": "Dano de Impacto",
   "evolution.tooltip.damage.melee": "%1$s Dano Corpo a Corpo",
+  "evolution.tooltip.damage.melee.name": "Dano Corpo a Corpo",
   "evolution.tooltip.damage.piercing": "%1$s Dano Perfurante",
+  "evolution.tooltip.damage.piercing.name": "Dano Perfurante",
   "evolution.tooltip.damage.ranged": "%1$s Dano à Distância",
+  "evolution.tooltip.damage.ranged.name": "Dano à Distância",
   "evolution.tooltip.damage.sickness": "%1$s Dano de Doença",
+  "evolution.tooltip.damage.sickness.name": "Dano de Doença",
   "evolution.tooltip.damage.slashing": "%1$s Dano Cortante",
+  "evolution.tooltip.damage.slashing.name": "Dano Cortante",
   "evolution.tooltip.damage.suffocation": "%1$s Dano de Sufocamento",
+  "evolution.tooltip.damage.suffocation.name": "Dano de Sufocamento",
   "evolution.tooltip.damage.total": "%1$s Dano Total",
+  "evolution.tooltip.damage.total.name": "Dano Total",
   "evolution.tooltip.damage.void": "%1$s Dano do Vazio",
+  "evolution.tooltip.damage.void.name": "Dano do Vazio",
   "evolution.tooltip.damageMultiplier": "x%1$s Multiplicador de Dano",
   "evolution.tooltip.damageProportional": "Dano Proporcional ao Momento",
   "evolution.tooltip.durability": "%1$s Durabilidade",
