--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -374,6 +374,7 @@
   "stat.evolution.time_since_last_rest": "Time since Last Rest",
   "stat.evolution.time_sneaking": "Time Sneaking",
   "stat.evolution.time_with_world_open": "Time with World Open",
+  "stat_type.evolution.block_placed": "Placed",
   "stat_type.evolution.damage_dealt": "You dealt %1$s of damage to %2$s",
   "stat_type.evolution.damage_dealt.name": "Damage dealt",
   "stat_type.evolution.damage_dealt.none": "You have never dealt damage to %1$s",
