Recipe book tabs are now fully customizable and have tooltips. Fixed some bugs with the recipe book.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -451,13 +451,6 @@
   "evolution.gui.menu.quit": "Quit Game",
   "evolution.gui.menu.reportBugs": "Report Bugs",
   "evolution.gui.menu.toTitle": "Back to Title Screen",
-  "evolution.gui.modsList.authors": "Authors: ",
-  "evolution.gui.modsList.credits": "Credits: ",
-  "evolution.gui.modsList.filterUpdates": "Filter mods with updates",
-  "evolution.gui.modsList.license": "License: ",
-  "evolution.gui.modsList.reportBugs": "Report Bugs",
-  "evolution.gui.modsList.version": "Version: ",
-  "evolution.gui.modsList.website": "Website",
   "evolution.gui.outOfMemory": "Out of Memory!",
   "evolution.gui.outOfMemory.cause": "This could be caused by a bug in the game or by the Java Virtual Machine not being allocated enough memory.",
   "evolution.gui.outOfMemory.info": "We've tried to free up enough memory to let you go back to the main menu and back to playing, but this may not have worked.",
@@ -468,6 +461,23 @@
   "evolution.gui.puzzle.checkBB": "Check Bounding Box:",
   "evolution.gui.puzzle.finalState": "Turns Into:",
   "evolution.gui.puzzle.targetPool": "Target Pool:",
+  "evolution.gui.recipebook.category.blast_furnace_blocks": "Blocks",
+  "evolution.gui.recipebook.category.blast_furnace_misc": "Misc",
+  "evolution.gui.recipebook.category.blast_furnace_search": "Search",
+  "evolution.gui.recipebook.category.campfire": "Campfire",
+  "evolution.gui.recipebook.category.crafting_building_blocks": "Building Blocks",
+  "evolution.gui.recipebook.category.crafting_equipment": "Equipment",
+  "evolution.gui.recipebook.category.crafting_misc": "Misc",
+  "evolution.gui.recipebook.category.crafting_search": "Search",
+  "evolution.gui.recipebook.category.furnace_blocks": "Blocks",
+  "evolution.gui.recipebook.category.furnace_food": "Food",
+  "evolution.gui.recipebook.category.furnace_misc": "Misc",
+  "evolution.gui.recipebook.category.furnace_search": "Search",
+  "evolution.gui.recipebook.category.smoker_food": "Food",
+  "evolution.gui.recipebook.category.smoker_search": "Search",
+  "evolution.gui.recipebook.category.smithing": "Smithing",
+  "evolution.gui.recipebook.category.stonecutter": "Stonecutter",
+  "evolution.gui.recipebook.category.unknown": "Unknown",
   "evolution.gui.recipebook.moreRecipes": "Right Click for More",
   "evolution.gui.recipebook.search": "Search...",
   "evolution.gui.recipebook.showingAll": "Showing All",
