--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -451,13 +451,6 @@
   "evolution.gui.menu.quit": "Sair do Jogo",
   "evolution.gui.menu.reportBugs": "Relatar Bugs",
   "evolution.gui.menu.toTitle": "Voltar ao Menu Principal",
-  "evolution.gui.modsList.authors": "Autores: ",
-  "evolution.gui.modsList.credits": "Créditos: ",
-  "evolution.gui.modsList.filterUpdates": "Filtrar mods com atualizações",
-  "evolution.gui.modsList.license": "Licença: ",
-  "evolution.gui.modsList.reportBugs": "Relatar Bugs",
-  "evolution.gui.modsList.version": "Versão: ",
-  "evolution.gui.modsList.website": "Website",
   "evolution.gui.outOfMemory": "Sem Memória!",
   "evolution.gui.outOfMemory.cause": "Isso pode ser causado por um bug no jogo ou pela Máquina Virtual do Java não ter memória suficiente alocada.",
   "evolution.gui.outOfMemory.info": "Nós tentamos limpar memória o suficiente para te deixar voltar ao menu principal e voltar a jogar, mas isso pode não ter funcionado.",
@@ -468,10 +461,27 @@
   "evolution.gui.puzzle.checkBB": "Checar caixa delimitadora:",
   "evolution.gui.puzzle.finalState": "Se transforma em:",
   "evolution.gui.puzzle.targetPool": "Pool desejada:",
+  "evolution.gui.recipebook.category.blast_furnace_blocks": "Blocos",
+  "evolution.gui.recipebook.category.blast_furnace_misc": "Diversos",
+  "evolution.gui.recipebook.category.blast_furnace_search": "Buscar",
+  "evolution.gui.recipebook.category.campfire": "Fogueira",
+  "evolution.gui.recipebook.category.crafting_building_blocks": "Blocos de Construção",
+  "evolution.gui.recipebook.category.crafting_equipment": "Equipamento",
+  "evolution.gui.recipebook.category.crafting_misc": "Diversos",
+  "evolution.gui.recipebook.category.crafting_search": "Buscar",
+  "evolution.gui.recipebook.category.furnace_blocks": "Blocos",
+  "evolution.gui.recipebook.category.furnace_food": "Comida",
+  "evolution.gui.recipebook.category.furnace_misc": "Diversos",
+  "evolution.gui.recipebook.category.furnace_search": "Buscar",
+  "evolution.gui.recipebook.category.smoker_food": "Comida",
+  "evolution.gui.recipebook.category.smoker_search": "Buscar",
+  "evolution.gui.recipebook.category.smithing": "Ferraria",
+  "evolution.gui.recipebook.category.stonecutter": "Cortador de Pedra",
+  "evolution.gui.recipebook.category.unknown": "Desconhecido",
   "evolution.gui.recipebook.moreRecipes": "Clique com o botão direito para ver mais",
   "evolution.gui.recipebook.search": "Buscar...",
-  "evolution.gui.recipebook.showingAll": "Todas",
-  "evolution.gui.recipebook.showingCraftable": "Fabricáveis",
+  "evolution.gui.recipebook.showingAll": "Exibindo Todas",
+  "evolution.gui.recipebook.showingCraftable": "Exibindo Fabricáveis",
   "evolution.gui.schematic.detectSize": "Detectar",
   "evolution.gui.schematic.entities": "Incluir Entidades",
   "evolution.gui.schematic.integrity": "Integridade e Seed do Esquema",
