Added Dynamic Lighting.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -33,6 +33,16 @@
   "evolution.config.debug.sky.sunPath": "Show Sun Path",
   "evolution.config.debug.sky.sunPath.desc": "Shows a green line in the skies representing the path of the Sun throughout the day.",
   "evolution.config.default": "Default: %1$s",
+  "evolution.config.dynamicLighting": "Dynamic Lighting",
+  "evolution.config.dynamicLighting.desc": "Settings related to dynamic lighting (light emitted by entities).",
+  "evolution.config.dynamicLighting.enabled": "Enable Dynamic Lighting",
+  "evolution.config.dynamicLighting.enabled.desc": "Toggles the dynamic lighting system. When enabled, items in your hand, like torches, will be able to light up your surroundings. Players will always be affected. Dropped items and other entities can be toggled separately.",
+  "evolution.config.dynamicLighting.entities": "Dynamic Lighting on Entities",
+  "evolution.config.dynamicLighting.entities.desc": "Toggles whether entities other than players and items will be able to emit light.",
+  "evolution.config.dynamicLighting.items": "Dynamic Lighting on Items",
+  "evolution.config.dynamicLighting.items.desc": "Toggles whether items dropped on the ground will be able to emit light.",
+  "evolution.config.dynamicLighting.tickrate": "Update Rate",
+  "evolution.config.dynamicLighting.tickrate.desc": "How frequently should dynamic lights refresh, in ticks. Lower values will produce more consistency results but will have a greater impact on performance. Higher values will produce a higher delay on the lights, especially when moving, but will have a lesser impact on performance.",
   "evolution.config.followUps": "Show Follow-Up Attack Counter",
   "evolution.config.followUps.desc": "Shows follow-up attack count above the crosshair.",
   "evolution.config.hitmarkers": "Show Hitmarkers",
