--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -33,6 +33,16 @@
   "evolution.config.debug.sky.sunPath": "Mostrar Caminho do Sol",
   "evolution.config.debug.sky.sunPath.desc": "Mostra uma linha verde nos céus representando o caminho do Sol através do dia.",
   "evolution.config.default": "Padrão: %1$s",
+  "evolution.config.dynamicLighting": "Iluminação Dinâmica",
+  "evolution.config.dynamicLighting.desc": "Configurações relacionadas à iluminação dinâmica (luz emitida por entidades).",
+  "evolution.config.dynamicLighting.enabled": "Habilitar Iluminação Dinâmica",
+  "evolution.config.dynamicLighting.enabled.desc": "Habilita o sistema de iluminação dinâmica. Quando ativado, itens na sua mão, como tochas, serão capazes de iluminar seus arredores. Jogadores sempre serão afetados. Itens no chão e outras entidades podem ser habilitados separadamente.",
+  "evolution.config.dynamicLighting.entities": "Iluminação Dinâmica em Entidades",
+  "evolution.config.dynamicLighting.entities.desc": "Habilita que entidades além de jogares e itens possam ser capazes de emitir luz.",
+  "evolution.config.dynamicLighting.items": "Iluminação Dinâmica em Itens",
+  "evolution.config.dynamicLighting.items.desc": "Habilita que itens largados no chão possam ser capazes de emitir luz.",
+  "evolution.config.dynamicLighting.tickrate": "Taxa de Atualização",
+  "evolution.config.dynamicLighting.tickrate.desc": "O quão frequentemente as luzes dinâmicas devem atualizar, em ticks. Valores mais baixos vão produzir resultados mais consistentes mas terão um maior impacto na performance. Valores mais altos vão produzir um delay mais alto nas luzes, especialmente ao se mover, mas terão um impacto menor na performance.",
   "evolution.config.followUps": "Mostrar Contador de Ataques Subsequentes",
   "evolution.config.followUps.desc": "Mostra o número de ataques subsequentes em cima da mira.",
   "evolution.config.hitmarkers": "Mostrar Hitmarkers",
