Improved advancement descriptions.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -327,9 +327,9 @@
   "evolution.advancements.stone_age.root.title": "Stone Age",
   "evolution.advancements.stone_age.root.description": "Our adventure begins in the Stone Age\nThe advancements will guide you!",
   "evolution.advancements.stone_age.definitely_a_rock.title": "Definitely a rock",
-  "evolution.advancements.stone_age.definitely_a_rock.description": "Pick up a rock",
+  "evolution.advancements.stone_age.definitely_a_rock.description": "Pick up a rock from the ground",
   "evolution.advancements.stone_age.knapping.title": "Knapping",
-  "evolution.advancements.stone_age.knapping.description": "Use a rock in a knapping block to shape it into something useful",
+  "evolution.advancements.stone_age.knapping.description": "Hit a knapping block with a rock to shape it into something useful",
   "_COMMENT": "________________________________________________________________________________________________________________________________STATS",
   "stat.evolution.chests_opened": "Chests Opened",
   "stat.evolution.items_dropped": "Items Dropped",
