--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -327,9 +327,9 @@
   "evolution.advancements.stone_age.root.title": "Idade da Pedra",
   "evolution.advancements.stone_age.root.description": "Nossa aventura começa na Idade da Pedra\nOs progressos irão lhe guiar!",
   "evolution.advancements.stone_age.definitely_a_rock.title": "Definitivamente uma pedra",
-  "evolution.advancements.stone_age.definitely_a_rock.description": "Pegue uma pedra",
+  "evolution.advancements.stone_age.definitely_a_rock.description": "Pegue uma pedra do chão",
   "evolution.advancements.stone_age.knapping.title": "Lascar",
-  "evolution.advancements.stone_age.knapping.description": "Use uma pedra num bloco de lascar para transformá-lo em algo útil",
+  "evolution.advancements.stone_age.knapping.description": "Bata num bloco de lascar com uma pedra para transformá-lo em algo útil",
   "_COMMENT": "________________________________________________________________________________________________________________________________STATS",
   "stat.evolution.chests_opened": "Baús Abertos",
   "stat.evolution.items_dropped": "Itens Largados",
