Time survived is now shown in death screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -425,6 +425,7 @@
   "evolution.gui.crash.report": "A report has been generated and can be found here:",
   "evolution.gui.crash.reportSaveFailed": "[Error saving report, see log]",
   "evolution.gui.crash.summary": "Minecraft ran into a problem and crashed.",
+  "evolution.gui.death.timeAlive": "Time survived",
   "evolution.gui.evolution": "Evolution",
   "evolution.gui.evolution.config": "Config",
   "evolution.gui.evolution.config.restore": "Restore Defaults",
@@ -561,6 +562,9 @@
   "evolution.calendar.month.november": "November",
   "evolution.calendar.month.december": "December",
   "evolution.calendar.time": "%3$s:%2$s %4$s",
+  "evolution.time.hours": "%1$s hour(s)",
+  "evolution.time.days": "%1$s day(s) and %2$s hour(s)",
+  "evolution.time.years": "%1$s year(s) and %2$s day(s)",
   "_COMMENT": "____________________________________________________________________________________________________________________________MATERIALS",
   "evolution.material.andesite": "Andesite",
   "evolution.material.basalt": "Basalt",
