--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -425,6 +425,7 @@
   "evolution.gui.crash.report": "Uma report foi gerada e pode ser encontrada aqui:",
   "evolution.gui.crash.reportSaveFailed": "[Erro ao salvar a report, veja o log]",
   "evolution.gui.crash.summary": "O Minecraft encontrou um problema e crashou.",
+  "evolution.gui.death.timeAlive": "Tempo sobrevivido",
   "evolution.gui.evolution": "Evolution",
   "evolution.gui.evolution.config": "Configurações",
   "evolution.gui.evolution.config.restore": "Restaurar Padrão",
@@ -561,6 +562,9 @@
   "evolution.calendar.month.november": "Novembro",
   "evolution.calendar.month.december": "Dezembro",
   "evolution.calendar.time": "%1$sh%2$s",
+  "evolution.time.hours": "%1$s hora(s)",
+  "evolution.time.days": "%1$s dia(s) e %2$s hora(s)",
+  "evolution.time.years": "%1$s ano(s) e %2$s dia(s)",
   "_COMMENT": "____________________________________________________________________________________________________________________________MATERIALS",
   "evolution.material.andesite": "Andesito",
   "evolution.material.basalt": "Basalto",
