Plank items are now referred to in singular form.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -820,24 +820,24 @@
   "block.evolution.mold_clay_spear": "Spear Head Clay Mold",
   "block.evolution.mold_clay_sword": "Sword Blade Clay Mold",
   "block.evolution.placeholder_block": "Placeholder Block",
-  "block.evolution.planks_acacia": "Acacia Planks",
-  "block.evolution.planks_aspen": "Aspen Planks",
-  "block.evolution.planks_birch": "Birch Planks",
-  "block.evolution.planks_cedar": "Cedar Planks",
-  "block.evolution.planks_ebony": "Ebony Planks",
-  "block.evolution.planks_elm": "Elm Planks",
-  "block.evolution.planks_eucalyptus": "Eucalyptus Planks",
-  "block.evolution.planks_fir": "Fir Planks",
-  "block.evolution.planks_kapok": "Kapok Planks",
-  "block.evolution.planks_mangrove": "Mangrove Planks",
-  "block.evolution.planks_maple": "Maple Planks",
-  "block.evolution.planks_oak": "Oak Planks",
-  "block.evolution.planks_old_oak": "Old Oak Planks",
-  "block.evolution.planks_palm": "Palm Planks",
-  "block.evolution.planks_pine": "Pine Planks",
-  "block.evolution.planks_redwood": "Redwood Planks",
-  "block.evolution.planks_spruce": "Spruce Planks",
-  "block.evolution.planks_willow": "Willow Planks",
+  "block.evolution.planks_acacia": "Acacia Plank",
+  "block.evolution.planks_aspen": "Aspen Plank",
+  "block.evolution.planks_birch": "Birch Plank",
+  "block.evolution.planks_cedar": "Cedar Plank",
+  "block.evolution.planks_ebony": "Ebony Plank",
+  "block.evolution.planks_elm": "Elm Plank",
+  "block.evolution.planks_eucalyptus": "Eucalyptus Plank",
+  "block.evolution.planks_fir": "Fir Plank",
+  "block.evolution.planks_kapok": "Kapok Plank",
+  "block.evolution.planks_mangrove": "Mangrove Plank",
+  "block.evolution.planks_maple": "Maple Plank",
+  "block.evolution.planks_oak": "Oak Plank",
+  "block.evolution.planks_old_oak": "Old Oak Plank",
+  "block.evolution.planks_palm": "Palm Plank",
+  "block.evolution.planks_pine": "Pine Plank",
+  "block.evolution.planks_redwood": "Redwood Plank",
+  "block.evolution.planks_spruce": "Spruce Plank",
+  "block.evolution.planks_willow": "Willow Plank",
   "block.evolution.polished_stone_andesite": "Polished Andesite",
   "block.evolution.polished_stone_basalt": "Polished Basalt",
   "block.evolution.polished_stone_chert": "Polished Chert",
@@ -1120,24 +1120,6 @@
   "item.evolution.pickaxe.silver": "Silver Pickaxe",
   "item.evolution.pickaxe.tin": "Tin Pickaxe",
   "item.evolution.pickaxe.zinc": "Zinc Pickaxe",
-  "item.evolution.plank_acacia": "Acacia Plank",
-  "item.evolution.plank_aspen": "Aspen Plank",
-  "item.evolution.plank_birch": "Birch Plank",
-  "item.evolution.plank_cedar": "Cedar Plank",
-  "item.evolution.plank_ebony": "Ebony Plank",
-  "item.evolution.plank_elm": "Elm Plank",
-  "item.evolution.plank_eucalyptus": "Eucalyptus Plank",
-  "item.evolution.plank_fir": "Fir Plank",
-  "item.evolution.plank_kapok": "Kapok Plank",
-  "item.evolution.plank_mangrove": "Mangrove Plank",
-  "item.evolution.plank_maple": "Maple Plank",
-  "item.evolution.plank_oak": "Oak Plank",
-  "item.evolution.plank_old_oak": "Old Oak Plank",
-  "item.evolution.plank_palm": "Palm Plank",
-  "item.evolution.plank_pine": "Pine Plank",
-  "item.evolution.plank_redwood": "Redwood Plank",
-  "item.evolution.plank_spruce": "Spruce Plank",
-  "item.evolution.plank_willow": "Willow Plank",
   "item.evolution.rope": "Rope",
   "item.evolution.sextant": "Sextant",
   "item.evolution.shovel.andesite": "Andesite Shovel",
