--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -820,24 +820,24 @@
   "block.evolution.mold_clay_spear": "Molde de Cabeça de Lança de Argila",
   "block.evolution.mold_clay_sword": "Molde de Lâmina de Espada de Argila",
   "block.evolution.placeholder_block": "Bloco Placeholder",
-  "block.evolution.planks_acacia": "Tábuas de Acácia",
-  "block.evolution.planks_aspen": "Tábuas de Choupo",
-  "block.evolution.planks_birch": "Tábuas de Bétula",
-  "block.evolution.planks_cedar": "Tábuas de Cedro",
-  "block.evolution.planks_ebony": "Tábuas de Ébano",
-  "block.evolution.planks_elm": "Tábuas de Ulmeiro",
-  "block.evolution.planks_eucalyptus": "Tábuas de Eucalipto",
-  "block.evolution.planks_fir": "Tábuas de Abeto",
-  "block.evolution.planks_kapok": "Tábuas de Sumaúma",
-  "block.evolution.planks_mangrove": "Tábuas de Árvore de Manguezal",
-  "block.evolution.planks_maple": "Tábuas de Bordo",
-  "block.evolution.planks_oak": "Tábuas de Carvalho",
-  "block.evolution.planks_old_oak": "Tábuas de Carvalho Ancião",
-  "block.evolution.planks_palm": "Tábuas de Palmeira",
-  "block.evolution.planks_pine": "Tábuas de Pinus",
-  "block.evolution.planks_redwood": "Tábuas de Sequoia",
-  "block.evolution.planks_spruce": "Tábuas de Pinheiro",
-  "block.evolution.planks_willow": "Tábuas de Salgueiro",
+  "block.evolution.planks_acacia": "Tábua de Acácia",
+  "block.evolution.planks_aspen": "Tábua de Choupo",
+  "block.evolution.planks_birch": "Tábua de Bétula",
+  "block.evolution.planks_cedar": "Tábua de Cedro",
+  "block.evolution.planks_ebony": "Tábua de Ébano",
+  "block.evolution.planks_elm": "Tábua de Ulmeiro",
+  "block.evolution.planks_eucalyptus": "Tábua de Eucalipto",
+  "block.evolution.planks_fir": "Tábua de Abeto",
+  "block.evolution.planks_kapok": "Tábua de Sumaúma",
+  "block.evolution.planks_mangrove": "Tábua de Árvore de Manguezal",
+  "block.evolution.planks_maple": "Tábua de Bordo",
+  "block.evolution.planks_oak": "Tábua de Carvalho",
+  "block.evolution.planks_old_oak": "Tábua de Carvalho Ancião",
+  "block.evolution.planks_palm": "Tábua de Palmeira",
+  "block.evolution.planks_pine": "Tábua de Pinus",
+  "block.evolution.planks_redwood": "Tábua de Sequoia",
+  "block.evolution.planks_spruce": "Tábua de Pinheiro",
+  "block.evolution.planks_willow": "Tábua de Salgueiro",
   "block.evolution.polished_stone_andesite": "Andesito Polido",
   "block.evolution.polished_stone_basalt": "Basalto Polido",
   "block.evolution.polished_stone_chert": "Cherte Polido",
@@ -1120,24 +1120,6 @@
   "item.evolution.pickaxe.silver": "Picareta de Prata",
   "item.evolution.pickaxe.tin": "Picareta de Estanho",
   "item.evolution.pickaxe.zinc": "Picareta de Zinco",
-  "item.evolution.plank_acacia": "Tábua de Acácia",
-  "item.evolution.plank_aspen": "Tábua de Choupo",
-  "item.evolution.plank_birch": "Tábua de Bétula",
-  "item.evolution.plank_cedar": "Tábua de Cedro",
-  "item.evolution.plank_ebony": "Tábua de Ébano",
-  "item.evolution.plank_elm": "Tábua de Ulmeiro",
-  "item.evolution.plank_eucalyptus": "Tábua de Eucalipto",
-  "item.evolution.plank_fir": "Tábua de Abeto",
-  "item.evolution.plank_kapok": "Tábua de Sumaúma",
-  "item.evolution.plank_mangrove": "Tábua de Árvore de Manguezal",
-  "item.evolution.plank_maple": "Tábua de Bordo",
-  "item.evolution.plank_oak": "Tábua de Carvalho",
-  "item.evolution.plank_old_oak": "Tábua de Carvalho Ancião",
-  "item.evolution.plank_palm": "Tábua de Palmeira",
-  "item.evolution.plank_pine": "Tábua de Pinus",
-  "item.evolution.plank_redwood": "Tábua de Sequoia",
-  "item.evolution.plank_spruce": "Tábua de Pinheiro",
-  "item.evolution.plank_willow": "Tábua de Salgueiro",
   "item.evolution.rope": "Corda",
   "item.evolution.sextant": "Sextante",
   "item.evolution.shovel.andesite": "Pá de Andesito",
