Added costs to structural tooltips.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -690,6 +690,10 @@
   "evolution.tooltip.slot.feet": "When on Feet:",
   "evolution.tooltip.stickLit": "Use on a fire source to lit into a torch",
   "evolution.tooltip.structural": "Structural properties:",
+  "evolution.tooltip.structuralArchCost": "Arch Cost: %1$s",
+  "evolution.tooltip.structuralArchCostRange": "Arch Cost: %1$s ~ %2$s",
+  "evolution.tooltip.structuralBeamCost": "Beam Cost: %1$s",
+  "evolution.tooltip.structuralBeamCostRange": "Beam Cost: %1$s ~ %2$s",
   "evolution.tooltip.structuralIntegrity": "Integrity: %1$s",
   "evolution.tooltip.structuralIntegrityRange": "Integrity: %1$s ~ %2$s",
   "evolution.tooltip.structuralType": "Type: %1$s",
