--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -690,6 +690,10 @@
   "evolution.tooltip.slot.feet": "Nos pés:",
   "evolution.tooltip.stickLit": "Use numa fonte de fogo para acender uma tocha",
   "evolution.tooltip.structural": "Propriedades Estruturais:",
+  "evolution.tooltip.structuralArchCost": "Custo de Arco: %1$s",
+  "evolution.tooltip.structuralArchCostRange": "Custo de Arco: %1$s ~ %2$s",
+  "evolution.tooltip.structuralBeamCost": "Custo de Viga: %1$s",
+  "evolution.tooltip.structuralBeamCostRange": "Custo de Viga: %1$s ~ %2$s",
   "evolution.tooltip.structuralIntegrity": "Integridade: %1$s",
   "evolution.tooltip.structuralIntegrityRange": "Integridade: %1$s ~ %2$s",
   "evolution.tooltip.structuralType": "Tipo: %1$s",
