Added more time stats. Improved the stats screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -382,26 +382,25 @@
   "stat.evolution.distance_walked": "Distance Walked",
   "stat.evolution.distance_walked_on_water": "Distance Walked on Water",
   "stat.evolution.distance_walked_under_water": "Distance Walked under Water",
+  "stat.evolution.time_awake": "Time Awake",
+  "stat.evolution.time_max_awake": "Longest Time Awake",
+  "stat.evolution.time_max_sleep": "Longest Time Sleeping",
   "stat.evolution.time_played": "Time Played",
+  "stat.evolution.time_since_last_awakened": "Time since Last Time Awake",
   "stat.evolution.time_since_last_death": "Time since Last Death",
   "stat.evolution.time_since_last_rest": "Time since Last Rest",
+  "stat.evolution.time_sleeping": "Time Sleeping",
   "stat.evolution.time_sneaking": "Time Sneaking",
   "stat.evolution.time_with_world_open": "Time with World Open",
   "stat_type.evolution.block_placed": "Placed",
-  "stat_type.evolution.damage_dealt": "You dealt %1$s of damage to %2$s",
+  "stat_type.evolution.damage_dealt": "Damage you dealt: %1$s",
   "stat_type.evolution.damage_dealt.name": "Damage dealt",
-  "stat_type.evolution.damage_dealt.none": "You have never dealt damage to %1$s",
-  "stat_type.evolution.damage_taken": "You took %1$s of damage from %2$s",
+  "stat_type.evolution.damage_taken": "Damage you took: %1$s",
   "stat_type.evolution.damage_taken.name": "Damage taken",
-  "stat_type.evolution.damage_taken.none": "You have never taken damage from %1$s",
-  "stat_type.minecraft.killed": "You killed %1$s %2$s",
+  "stat_type.minecraft.killed": "You killed: %1$s",
   "stat_type.minecraft.killed.name": "Times you killed",
-  "stat_type.minecraft.killed.none": "You have never killed %1$s",
-  "stat_type.minecraft.killed.once": "You killed 1 %1$s",
-  "stat_type.minecraft.killed_by": "%1$s killed you %2$s times",
+  "stat_type.minecraft.killed_by": "Times you got killed: %1$s",
   "stat_type.minecraft.killed_by.name": "Times you got killed",
-  "stat_type.minecraft.killed_by.none": "You have never been killed by %1$s",
-  "stat_type.minecraft.killed_by.once": "%1%s killed you once",
   "_COMMENT": "_________________________________________________________________________________________________________________________________GUIs",
   "evolution.gui.controls.az": "A→Z",
   "evolution.gui.controls.category": "Category",
