--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -382,26 +382,25 @@
   "stat.evolution.distance_walked": "Distância Andada",
   "stat.evolution.distance_walked_on_water": "Distância Andada sobre a Água",
   "stat.evolution.distance_walked_under_water": "Distância Andada embaixo d'Água",
+  "stat.evolution.time_awake": "Tempo Acordado(a)",
+  "stat.evolution.time_max_awake": "Maior Tempo Acordado(a)",
+  "stat.evolution.time_max_sleep": "Maior Tempo Dormindo",
   "stat.evolution.time_played": "Tempo Jogado",
+  "stat.evolution.time_since_last_awakened": "Tempo desde a Última Vez Acordado(a)",
   "stat.evolution.time_since_last_death": "Tempo desde a Última Morte",
   "stat.evolution.time_since_last_rest": "Tempo desde o Último Descanço",
-  "stat.evolution.time_sneaking": "Tempo Agachado",
+  "stat.evolution.time_sleeping": "Tempo Dormindo",
+  "stat.evolution.time_sneaking": "Tempo Agachado(a)",
   "stat.evolution.time_with_world_open": "Tempo com o Mundo Aberto",
   "stat_type.evolution.block_placed": "Colocado",
-  "stat_type.evolution.damage_dealt": "Você causou %1$s de dano em %2$s",
+  "stat_type.evolution.damage_dealt": "Dano que você causou: %1$s",
   "stat_type.evolution.damage_dealt.name": "Dano causado",
-  "stat_type.evolution.damage_dealt.none": "Você nunca causou dano em %1$s",
-  "stat_type.evolution.damage_taken": "Você tomou %1$s de dano de %2$s",
+  "stat_type.evolution.damage_taken": "Dano que você tomou: %1$s",
   "stat_type.evolution.damage_taken.name": "Dano tomado",
-  "stat_type.evolution.damage_taken.none": "Você nunca tomou dano de %1$s",
-  "stat_type.minecraft.killed": "Você matou %1$s %2$s",
+  "stat_type.minecraft.killed": "Você matou: %1$s",
   "stat_type.minecraft.killed.name": "Vezes que você matou",
-  "stat_type.minecraft.killed.none": "Você nunca matou %1$s",
-  "stat_type.minecraft.killed.once": "Você matou 1 %1$s",
-  "stat_type.minecraft.killed_by": "%1$s mataram você %2$s vezes",
+  "stat_type.minecraft.killed_by": "Vezes que você foi morto: %1$s",
   "stat_type.minecraft.killed_by.name": "Vezes que você foi morto",
-  "stat_type.minecraft.killed_by.none": "Você nunca foi morto por %1$s",
-  "stat_type.minecraft.killed_by.once": "%1$s mataram você uma vez",
   "_COMMENT": "_________________________________________________________________________________________________________________________________GUIs",
   "evolution.gui.controls.az": "A→Z",
   "evolution.gui.controls.category": "Categoria",
